<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foraminifera</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="number_of_chambers">Number of chambers</string>
    <string name="translation_factor">Translation factor</string>
    <string name="growth_factor">Growth factor</string>
    <string name="thickness_growth_factor">Thickness growth factor</string>
    <string name="deviation_angle">Deviation angle</string>
    <string name="rotation_angle">Rotation angle</string>

    <string name="clipping_x">Clipping X-pane position</string>
    <string name="clipping_y">Clipping Y-pane position</string>
    <string name="clipping_z">Clipping Z-pane position</string>

    <string name="generate_button">Generate</string>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="get_details">Get details</string>
</resources>
